<resources>
    <string name="app_name">BlablaWild</string>
    <string name="search_an_intinerary">SEARCH AN INTINERARY</string>
    <string name="search_text">Search</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="search">SEARCH</string>
    <string name="name">Name</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="lien"><![CDATA[>>]]></string>

    <string-array name="listArray">
        <item>Please select…</item>
        <item>Car</item>
        <item>Boat</item>
        <item>Plane</item>
    </string-array>


</resources>
